Aggiunte istruzioni per install

--- a/geometric_controller/CMakeLists.txt
+++ b/geometric_controller/CMakeLists.txt
@@ -53,6 +53,64 @@ target_link_libraries(geometric_controller_node ${PROJECT_NAME} ${catkin_LIBRARI
 ##########
 # cs_install()
 # cs_export()
+
+#############
+## Install ##
+#############
+#catkin_install_python(PROGRAMS 
+#
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# catkin_install_python(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+#catkin_install_python(PROGRAMS src/navigation.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
+
+## Mark executables for installation
+## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
+ install(TARGETS ${PROJECT_NAME}_node
+  
+   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+ )
+
+## Mark libraries for installation
+## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
+ install(TARGETS ${PROJECT_NAME}
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+ )
+
+## Mark cpp header files for installation
+ install(DIRECTORY include/${PROJECT_NAME}/
+   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+   FILES_MATCHING PATTERN "*.h"
+   PATTERN ".svn" EXCLUDE
+ )
+
+## Mark other files for installation (e.g. launch and bag files, etc.)
+ install(FILES
+   launch/config_file.rviz
+   launch/mav_trajectory_track_circle.launch
+   launch/sitl_multi_vehicle_track_circle.launch
+   launch/sitl_trajectory_track_circle.launch
+   launch/sitl_trajectory_track_lamniscate.launch
+   launch/trajectory_controller.launch  
+   cfg/GeometricController.cfg
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+ )
+
+
 #############
 ## Testing ##
 #############
