Fix compilazione <mav_msgs/eigen_mav_msgs.h>

--- a/geometric_controller/CMakeLists.txt
+++ b/geometric_controller/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   mavros_extras
   mavros_msgs
   mavlink
+  mav_msgs
 )
 
 generate_dynamic_reconfigure_options(
