--- a/geometric_controller/package.xml
+++ b/geometric_controller/package.xml
@@ -23,7 +23,7 @@
   <build_depend>mavros_extras</build_depend>
   <build_depend>mavros_msgs</build_depend>
   <build_depend>mavros_extras</build_depend>
-  <build_depend> eigen_catkin</build_depend>
+  <build_depend>eigen_catkin</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -36,6 +36,7 @@
   <run_depend>mavros</run_depend>
   <run_depend>mavros_extras</run_depend>
   <run_depend>mavros_msgs</run_depend>
+  <run_depend>mav_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
